# programming-and-algorithmization-basics

./: .gitignore  CMakeLists.txt  README.md  dependencies.txt  input.txt  lablist.json  launch_test.sh  main.c
.github/workflows/: labtests.yml
include/: Tasks.h
lab1/: 104A.c  1064A.c  1118A.c  1244A.c  1269A.c  1283A.c  1358A.c  486A.c  4A.c  513A.c  546A.c  581A.c  617A.c  630A.c  746A.c  835A.c
lab10/: 1.c  12.c  14.c  15.c  16.c  17.c  18.c  19.c  20.c  4.c  6.c
lab11/: 10.c  12.c  2.c  4.c
lab12/: circle.c  point.c
lab15/: main.c  tests.json
lab16/: main.c  tests.json
lab17/: main.c  tests.json
lab2/: 1054A.c  1101A.c  1102A.c  1196A.c  1256A.c  1304A.c  1325A.c  1327A.c  1373A.c  1426A.c  1519B.c  1551A.c  1A.c  336A.c  610A.c  624A.c  804A.c  805A.c  979A.c
lab20/task1/: 1635A.cpp  main.cpp
lab20/task2/: main.cpp
lab20/task3/: main.cpp
lab20/task4/: main.cpp
lab20/task5/: main.cpp
lab20/task7/: main.cpp
lab21/: taska.cpp  taskb.cpp  taskc.cpp  taskd.cpp  taske.cpp  taskf.cpp  taskg.cpp  taskh.cpp  taski.cpp  taskj.cpp  taskk.cpp  taskl.cpp
lab3/: 1023A.c  1036A.c  1133A.c  1136B.c  1181A.c  1199B.c  1260A.c  1506A.c  1539A.c  1560B.c  195A.c  761A.c  990A.c  991A.c
lab4/: 1.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  consoleoutput.h  tests.json
lab5/: 116A.c  11A.c  1296B.c  1472A.c  1511A.c  1542A.c  155A.c  231A.c  245A.c  276A.c  385A.c  427A.c  432A.c  467A.c  492A.c  560A.c  586A.c  598A.c  677A.c  749A.c  791A.c  797B_1.c  797B_2.c  839A.c  977A.c
lab6/: tests.json  utils.c
lab6/0/: CMakeLists.txt  test.c
lab6/1/: CMakeLists.txt  test.c
lab6/10/: CMakeLists.txt  test.c
lab6/11/: CMakeLists.txt  test.c
lab6/12/: CMakeLists.txt  test.c
lab6/13/: CMakeLists.txt  test.c
lab6/14/: CMakeLists.txt  test.c  testmock.c  testunit.c
lab6/15/: CMakeLists.txt  test.c
lab6/16/: CMakeLists.txt  test.c
lab6/2/: CMakeLists.txt  test.c
lab6/3/: CMakeLists.txt  test.c
lab6/4/: CMakeLists.txt  test.c
lab6/5/: CMakeLists.txt  test.c
lab6/6/: CMakeLists.txt  test.c
lab6/7/: CMakeLists.txt  test.c
lab6/8/: CMakeLists.txt  test.c
lab6/9/: CMakeLists.txt  test.c
lab6/sharedfuncs/: CMakeLists.txt
lab6/sharedfuncs/inc/: 10func.h  11func.h  12func.h  13func.h  14func.h  15func.h  16func.h  1func.h  2func.h  3func.h  4func.h  5func.h  6func.h  7func.h  8func.h  9func.h  consoleoutput.h  utils.h
lab6/sharedfuncs/src/: 10func.c  11func.c  12func.c  13func.c  14func.c  15func.c  16func.c  1func.c  2func.c  3func.c  4func.c  5func.c  6func.c  7func.c  8func.c  9func.c  utils.c
lab7/: 1037A.c  tests.json
lab7/1/: CMakeLists.txt  test.c
lab7/10/: CMakeLists.txt  test.c
lab7/2/: CMakeLists.txt  test.c
lab7/3/: CMakeLists.txt  test.c
lab7/sharedfuncs/: CMakeLists.txt
lab7/sharedfuncs/inc/: 10func.h  1func.h  2func.h  3func.h  4func.h  5func.h  6func.h  7func.h  8func.h  9func.h
lab7/sharedfuncs/src/: 10func.c  1func.c  2func.c  3func.c  4func.c  5func.c  6func.c  7func.c  8func.c  9func.c
lab8/sharedfuncs/: CMakeLists.txt
lab8/sharedfuncs/inc/: 10func.h  11func.h  12func.h  18func.h  19func.h  1func.h  20func.h  21func.h  22func.h  2func.h  5func.h  7func.h  9func.h
lab8/sharedfuncs/src/: 10func.c  11func.c  12func.c  18func.c  19func.c  1func.c  20func.c  21func.c  22func.c  2func.c  5func.c  7func.c  9func.c
lab9/: test.c
libs/: CMakeLists.txt  tester.c  tester.h
libs/alg/: CMakeLists.txt  alg.h
libs/alg/lab11/: 10func.c  11func.c  12func.c  13func.c  1func.c  2func.c  3func.c  4func.c  5func.c  6func.c  7func.c  8func.c  9func.c
libs/alg/lab12/circle/: CMakeLists.txt  circle.c  circle.h
libs/alg/lab12/point/: CMakeLists.txt  point.c  point.h
libs/alg/lab16/: 13func.c  15func.c  17func.c  5func.c
libs/alg/lab6/: 10func.c  11func.c  12func.c  13func.c  14func.c  15func.c  16func.c  1func.c  2func.c  3func.c  4func.c  5func.c  6func.c  7func.c  8func.c  9func.c
libs/alg/lab7/: 10func.c  1func.c  2func.c  3func.c  4func.c  5func.c  6func.c  7func.c  8func.c  9func.c
libs/alg/lab9/: 1func.c  3func.c  9func.c  foq.c
libs/cJSON/: CMakeLists.txt  cJSON.c  cJSON.h  cJSON_Utils.c  cJSON_Utils.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: CMakeLists.txt  matrix.c  matrix.h
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/vectorVoid/: vectorVoid.c  vectorVoid.h
libs/generators/: generateOrdered.c  generateOrdered.h  generateOrderedBackwards.c  generateOrderedBackwards.h  generateRandom.c  generateRandom.h
libs/labtestgenerator/: CMakeLists.txt  testgenerator.c  testgenerator.h
libs/sorters/: bubbleSort.c  bubbleSort.h  combSort.c  combSort.h  insertionSort.c  insertionSort.h  radixSort.c  radixSort.h  selectionSort.c  selectionSort.h  shellSort.c  shellSort.h
src/: CMakeLists.txt  task1.c  task10.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
string/: string_.c  string_.h
test/: CMakeLists.txt  RunAllTests.c  TestTask1.c  TestTask2.c  TestTask3.c  TestTask4.c  TestTask5.c
test/task1/: CMakeLists.txt  task1.h  test1.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test19.c  test20.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
test/task2/: CMakeLists.txt  task2.h  test1.c  test2.c  test3.c  test4.c  test5.c
test/task3/: CMakeLists.txt  task3.h  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c
test/task4/: CMakeLists.txt  task4.h  test1.c  test2.c  test3.c  test4.c
test/task5/: CMakeLists.txt  task5.h  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c
test/task6/: CMakeLists.txt  task6.h  test1.c  test10.c  test11.c  test12.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
test/task7/: CMakeLists.txt  task7.h  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c
test/task8/: CMakeLists.txt  task8.h  test1.c  test2.c  test3.c  test4.c  test5.c
test/task9/: CMakeLists.txt  task9.h  test1.c  test2.c  test3.c  test4.c
(+90 files in other folders)
