add_executable(task1_test1 test1.c)
target_link_libraries(task1_test1 practice)
add_executable(task1_test2 test2.c)
target_link_libraries(task1_test2 practice)
add_executable(task1_test3 test3.c)
target_link_libraries(task1_test3 practice)
add_executable(task1_test4 test4.c)
target_link_libraries(task1_test4 practice)
add_executable(task1_test5 test5.c)
target_link_libraries(task1_test5 practice)
add_executable(task1_test6 test6.c)
target_link_libraries(task1_test6 practice)
add_executable(task1_test7 test7.c)
target_link_libraries(task1_test7 practice)
add_executable(task1_test8 test8.c)
target_link_libraries(task1_test8 practice)
add_executable(task1_test9 test9.c)
target_link_libraries(task1_test9 practice)
add_executable(task1_test10 test10.c)
target_link_libraries(task1_test10 practice)
add_executable(task1_test11 test11.c)
target_link_libraries(task1_test11 practice)
add_executable(task1_test12 test12.c)
target_link_libraries(task1_test12 practice)
add_executable(task1_test13 test13.c)
target_link_libraries(task1_test13 practice)
add_executable(task1_test14 test14.c)
target_link_libraries(task1_test14 practice)
add_executable(task1_test15 test15.c)
target_link_libraries(task1_test15 practice)
add_executable(task1_test16 test16.c)
target_link_libraries(task1_test16 practice)
add_executable(task1_test17 test17.c)
target_link_libraries(task1_test17 practice)
add_executable(task1_test18 test18.c)
target_link_libraries(task1_test18 practice)
add_executable(task1_test19 test19.c)
target_link_libraries(task1_test19 practice)
add_executable(task1_test20 test20.c)
target_link_libraries(task1_test20 practice)

add_test(NAME testTask1APositivePositiveIntRoots COMMAND task1_test1)
add_test(NAME testTask1APositivePositiveRealRoots COMMAND task1_test2)
add_test(NAME testTask1APositivePositiveAndNegativeIntRoots COMMAND task1_test3)
add_test(NAME testTask1APositivePositiveAndNegativeRealRoots COMMAND task1_test4)
add_test(NAME testTask1APositiveZeroAndNegativeIntRoots COMMAND task1_test5)
add_test(NAME testTask1APositiveZeroAndNegativeRealRoots COMMAND task1_test6)
add_test(NAME testTask1APositivePositiveAndZeroIntRoots COMMAND task1_test7)
add_test(NAME testTask1APositivePositiveAndZeroRealRoots COMMAND task1_test8)
add_test(NAME testTask1APositiveNegativeIntRoots COMMAND task1_test9)
add_test(NAME testTask1APositiveNegativeRealRoots COMMAND task1_test10)
add_test(NAME testTask1ANegativeNegativeIntRoots COMMAND task1_test11)
add_test(NAME testTask1ANegativeNegativeRealRoots COMMAND task1_test12)
add_test(NAME testTask1ANegativePositiveAndNegativeIntRoots COMMAND task1_test13)
add_test(NAME testTask1ANegativePositiveAndNegativeRealRoots COMMAND task1_test14)
add_test(NAME testTask1ANegativeZeroAndNegativeIntRoots COMMAND task1_test15)
add_test(NAME testTask1ANegativeZeroAndNegativeRealRoots COMMAND task1_test16)
add_test(NAME testTask1ANegativePositiveAndZeroIntRoots COMMAND task1_test17)
add_test(NAME testTask1ANegativePositiveAndZeroRealRoots COMMAND task1_test18)
add_test(NAME testTask1ANegativePositiveIntRoots COMMAND task1_test19)
add_test(NAME testTask1ANegativePositiveRealRoots COMMAND task1_test20)