add_executable(task2_test1 test1.c)
target_link_libraries(task2_test1 practice)
add_executable(task2_test2 test2.c)
target_link_libraries(task2_test2 practice)
add_executable(task2_test3 test3.c)
target_link_libraries(task2_test3 practice)
add_executable(task2_test4 test4.c)
target_link_libraries(task2_test4 practice)
add_executable(task2_test5 test5.c)
target_link_libraries(task2_test5 practice)

add_test(NAME testTask2EmptySpace COMMAND task2_test1)
add_test(NAME testTask2NotEnoughSpace COMMAND task2_test2)
add_test(NAME testTask2EnoughSpaceCannotPlace COMMAND task2_test3)
add_test(NAME testTask2ShouldFitPerfectly COMMAND task2_test4)
add_test(NAME testTask2ShouldFitExtraSpaceLeft COMMAND task2_test5)