add_executable(task3_test1 test1.c)
target_link_libraries(task3_test1 practice)
add_executable(task3_test2 test2.c)
target_link_libraries(task3_test2 practice)
add_executable(task3_test3 test3.c)
target_link_libraries(task3_test3 practice)
add_executable(task3_test4 test4.c)
target_link_libraries(task3_test4 practice)
add_executable(task3_test5 test5.c)
target_link_libraries(task3_test5 practice)
add_executable(task3_test6 test6.c)
target_link_libraries(task3_test6 practice)
add_executable(task3_test7 test7.c)
target_link_libraries(task3_test7 practice)
add_executable(task3_test8 test8.c)
target_link_libraries(task3_test8 practice)

add_test(NAME testTask3NoWorkingTime COMMAND task3_test1)
add_test(NAME testTask3NegativeWorkingTime COMMAND task3_test2)
add_test(NAME testTask3NotEnoughWorkingTime COMMAND task3_test3)
add_test(NAME testTask3TimeEnoughJustForOneTravel COMMAND task3_test4)
add_test(NAME testTask3RegularScenario COMMAND task3_test5)
add_test(NAME testTask3Teleportation COMMAND task3_test6)
add_test(NAME testTask3NoRest COMMAND task3_test7)
add_test(NAME testTask3ShouldNotOverfill COMMAND task3_test8)