add_executable(task5_test1 test1.c)
target_link_libraries(task5_test1 practice)
add_executable(task5_test2 test2.c)
target_link_libraries(task5_test2 practice)
add_executable(task5_test3 test3.c)
target_link_libraries(task5_test3 practice)
add_executable(task5_test4 test4.c)
target_link_libraries(task5_test4 practice)
add_executable(task5_test5 test5.c)
target_link_libraries(task5_test5 practice)
add_executable(task5_test6 test6.c)
target_link_libraries(task5_test6 practice)

add_test(NAME testTask5FindSurvivorRegularScenario COMMAND task5_test1)
add_test(NAME testTask5FindSurvivorMBiggerThanN COMMAND task5_test2)
add_test(NAME testTask5FindSurvivorNZero COMMAND task5_test3)
add_test(NAME testTask5FindSurvivorOneNoResultsFound COMMAND task5_test4)
add_test(NAME testTask5FindSurvivorOneNZero COMMAND task5_test5)
add_test(NAME testTask5FindSurvivorOneRegularScenario COMMAND task5_test6)