add_executable(task6_test1 test1.c)
target_link_libraries(task6_test1 practice)
add_executable(task6_test2 test2.c)
target_link_libraries(task6_test2 practice)
add_executable(task6_test3 test3.c)
target_link_libraries(task6_test3 practice)
add_executable(task6_test4 test4.c)
target_link_libraries(task6_test4 practice)
add_executable(task6_test5 test5.c)
target_link_libraries(task6_test5 practice)
add_executable(task6_test6 test6.c)
target_link_libraries(task6_test6 practice)
add_executable(task6_test7 test7.c)
target_link_libraries(task6_test7 practice)
add_executable(task6_test8 test8.c)
target_link_libraries(task6_test8 practice)
add_executable(task6_test9 test9.c)
target_link_libraries(task6_test9 practice)
add_executable(task6_test10 test10.c)
target_link_libraries(task6_test10 practice)
add_executable(task6_test11 test11.c)
target_link_libraries(task6_test11 practice)
add_executable(task6_test12 test12.c)
target_link_libraries(task6_test12 practice)

add_test(NAME testTask6Empty COMMAND task6_test1)
add_test(NAME testTask6OnlyOnes COMMAND task6_test2)
add_test(NAME testTask6SingleZero COMMAND task6_test3)
add_test(NAME testTask6FullLine COMMAND task6_test4)
add_test(NAME testTask6PartLine COMMAND task6_test5)
add_test(NAME testTask6FullColumn COMMAND task6_test6)
add_test(NAME testTask6PartColumn COMMAND task6_test7)
add_test(NAME testTask6FullBottomLeftTopRightDiagonal COMMAND task6_test8)
add_test(NAME testTask6PartBottomLeftTopRightDiagonal COMMAND task6_test9)
add_test(NAME testTask6FullBottomRightTopLeftDiagonal COMMAND task6_test10)
add_test(NAME testTask6PartBottomRightTopLeftDiagonal COMMAND task6_test11)
add_test(NAME testTask6Regular COMMAND task6_test12)