add_executable(task7_test1 test1.c)
target_link_libraries(task7_test1 practice)
add_executable(task7_test2 test2.c)
target_link_libraries(task7_test2 practice)
add_executable(task7_test3 test3.c)
target_link_libraries(task7_test3 practice)
add_executable(task7_test4 test4.c)
target_link_libraries(task7_test4 practice)
add_executable(task7_test5 test5.c)
target_link_libraries(task7_test5 practice)
add_executable(task7_test6 test6.c)
target_link_libraries(task7_test6 practice)
add_executable(task7_test7 test7.c)
target_link_libraries(task7_test7 practice)

add_test(NAME testTask7Zeros COMMAND task7_test1)
add_test(NAME testTask7TwoNumbersBin COMMAND task7_test2)
add_test(NAME testTask7TwoNumbers COMMAND task7_test3)
add_test(NAME testTask7MultipleNumbers COMMAND task7_test4)
add_test(NAME testTask7MultipleNumbersBin COMMAND task7_test5)
add_test(NAME testTask7Overflow COMMAND task7_test6)
add_test(NAME testTask7MT COMMAND task7_test7)