add_executable(task8_test1 test1.c)
target_link_libraries(task8_test1 practice)
add_executable(task8_test2 test2.c)
target_link_libraries(task8_test2 practice)
add_executable(task8_test3 test3.c)
target_link_libraries(task8_test3 practice)
add_executable(task8_test4 test4.c)
target_link_libraries(task8_test4 practice)
add_executable(task8_test5 test5.c)
target_link_libraries(task8_test5 practice)

add_test(NAME testTask8NoPoints COMMAND task8_test1)
add_test(NAME testTask8TwoPoints COMMAND task8_test2)
add_test(NAME testTask8Triangle COMMAND task8_test3)
add_test(NAME testTask8Polygon COMMAND task8_test4)
add_test(NAME testTask8RevertedPolygon COMMAND task8_test5)